<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="category">category</string>
    <string name="todo">TODO</string>
    <string name="would">What would you like to eat?</string>
    <string name="over">over popular item</string>
    <string name="area">Area :</string>
    <string name="category_meal">Category :</string>
</resources>